<package>

  <name>pharos_drivers</name>
  <version>1.1.2</version>
  <description>
    drivers for autonomous vehicle pharos
  </description>
  <maintainer email="kwanghyun79@gmail.com">Kwanghyun</maintainer>
  <author> LeeKwangHyun</author>
  <license>BSD</license>
 
  <url type="website">none</url>
  <url type="repository">none</url>
  <url type="bugtracker">none</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>

</package>
